src/test/ui/associated-types/associated-types-projection-to-unrelated-trait-in-method-without-default.stderr
error[E0277]: the trait bound `Self: Get` is not satisfied
  --> $DIR/associated-types-projection-to-unrelated-trait-in-method-without-default.rs:10:5
   |
LL |     fn okay<U:Get>(&self, foo: U, bar: <Self as Get>::Value);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |     |                                                       |
   |     |                                                       help: consider further restricting `Self`: `where Self: Get`
   |     the trait `Get` is not implemented for `Self`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
